js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-async-function-await-import-defer-assignment-expr-not-optional.js
DONOTEVALUATE
(
)
;
async
function
f
(
)
{
await
import
.
defer
(
)
;
}
